@@ -7,6 +7,7 @@ contours
 fence
 globe
 kurt
+masonry
 molecule
 nmgmodel
 picket_fence
@@ -25,5 +26,4 @@ terrain
 torii
 tube
 vegitation
-wall
 wdb_example
